Tried to fix scrollbar, gave up!

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 :host {
 
+    scrollbar-color: dark;
+
     h1 {
         font-size: 4rem;
     }
