--- a/src/app/components/load-resources/load-resources.component.scss
+++ b/src/app/components/load-resources/load-resources.component.scss
@@ -5,6 +5,12 @@
     background-blend-mode: overlay;
     width: 100%;
     height:100vh;
+    margin: 0px;
+    scrollbar-color: dark;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 
